        [CHANGE]
        * Add --no-pm-file option to spvmdist command
        * Add Fn->is_hex_digit.
        * Add Fn->contains.
        * Add Fn->get_next_code_point.
        * Add Fn->look_next_code_point.
        * Generate Foo.native/src/.gitkeep and Foo.native/include/.gitkeep in "--native" option of "spvmdist".
        * Fn class doesn't depend on Regex and Unicode class.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Rename SPVM::Builder::Generator::Dist to SPVM::Dist.
        * Remove Fn->replace.
        * Remove Fn->match.
        * "SPVM-" prefix is added to the default output directory of "spvmdist" command.
0.9602  2022-06-07
        [CHANGE]
        * Improve compilation error messages.
        * add "spvmdist" command.
          
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove "spvmgenlib" command. The important fetures are merged into "spvmdist"
          [Before]
          spvmgenlib --module-dir t/default/lib/SPVM TestCase::CompileError::Foo
          [After]
          spvmdist -f --only-lib-files TestCase::CompileError::Foo t/default/lib

0.9601  2022-06-01
        [CHANGE]
        * Regex class support "i" (ignore case) option.
        * Logical operator can be used as operands.
          
          my $ret = !1;
          my $ret = 1 && 1;
          my $ret = 1 || 1;
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Change ByteList->new method definition
          [Before]
          static method new : ByteList ($array : byte[])
          [After]
          static method new : ByteList ($array : byte[]...)
        * Change DoubleList->new method definition
          [Before]
          static method new : DoubleList ($array : double[])
          [After]
          static method new : DoubleList ($array : double[]...)
        * Change FloatList->new method definition
          [Before]
          static method new : FloatList ($array : float[])
          [After]