@@ -8,6 +8,9 @@ Revision history for SPVM
         * Add Fn->look_next_code_point.
         * Generate Foo.native/src/.gitkeep and Foo.native/include/.gitkeep in "--native" option of "spvmdist".
         * Fn class doesn't depend on Regex and Unicode class.
+
+        [BUG FIX]
+        * Fix the name argument of Makefile.PL that is generated by "spvmdist" command.
         
         [NON BACKWORD COMPATIBLE CHANGES]
         * Rename SPVM::Builder::Generator::Dist to SPVM::Dist.
